MakeCatalog: new columns related to maximum value and half of it
Recently the '--fwhmobs' option was added, which can be a very good measure
of the flux distribution within a labeled region. However, we didn't have
any method to access its reliability.

Therefore with this commit there is a new column called '--maximum', which
returns the exact maximum used by the FWHM measurement. By comparing the
value in '--maximum' with the local standard deviation we can see how
reliable the result is. This is described fully in the book under
'--fwhmobs'.

Also, since the maximum value is much less affected by noise or deblending
issues (compared to the total flux), the area of the pixels above this
value can also shed some light on the profile shape and surface
brightness. So three more columns were added for such measurements:
'--halfmaxarea', '--halfmaxsum' and '--halfmaxsb'.

--- a/NEWS
+++ b/NEWS
@@ -42,8 +42,12 @@ See the end of the file for license conditions.
      within the image.
 
   MakeCatalog:
+   --maximum: maximum value of labeled regions pixels (clump/object).
    --areaarcsec2: area of labeled region (clump/object) in arcsec^2.
-   --fwhmobs: The observed FWHM in pixels, along the major axis.
+   --fwhmobs: observed FWHM in pixels, along the major axis.
+   --halfmaxarea: number of pixels with a value larger than half the maximum.
+   --halfmaxsum: sum of pixels with a value larger than half the maximum.
+   --halfmaxsb: surf. brightness within half max (--halfmaxsum/--halfmaxarea).
    --fracsum: fractions to use in '--fracsumarea1' or '--fracsumarea2'.
    --fracsumarea1: area of given fraction of the summed object or clump values.
    --fracsumarea2: area of given fraction of the summed object or clump values.
